--- a/server/index.html
+++ b/server/index.html
@@ -1,3 +1,28 @@
+<!-- <script src="js/geoPosition.js" type="text/javascript" charset="utf-8"></script>
+
+
+<script type="text/javascript">
+    
+    var geoPosition = geoPosition;
+
+    if(geoPosition.init()){  // Geolocation Initialisation
+            geoPosition.getCurrentPosition(success_callback,error_callback,{enableHighAccuracy:true});
+    }else{
+            // You cannot use Geolocation in this device
+    }
+    geoPositionSimulator.init(); 
+
+    // p : geolocation object
+    function success_callback(p){
+        // p.latitude : latitude value
+        // p.longitude : longitude value
+    }
+
+    function error_callback(p){
+        // p.message : error message
+    }
+</script>
+ -->
 
 <script type="text/javascript">
 	navigator.geolocation.getCurrentPosition(function(position) {
@@ -5,10 +30,18 @@
 		var lat = position.coords.latitude;
 		var lon = position.coords.longitude;
 		//document.write('<p>'+lat+'</p>'
-			);
+			;
 		return [lat, lon];
 	});
+
+var formFiller = formFiller() {
+	var emptyField = document.getElementById(geolocation.value)
+	var filledField = str.replace("", lat + "," + lon)
+};
+
+formFiller();
 </script>
+
 
 <h1> Are you Hangry?</h1>
 <h2> Do you want to eat?</h2>
@@ -16,6 +49,7 @@
 		<br>
 		<br>
 		<form action="./results.html" method="GET">
+			<input type="hidden" name="location" id="geolocation" value="">
 			<input type="radio" name="rating" value="0.5"> 0.5
 			
 			<input type="radio" name="rating" value="1.0"> 1.0
