--- a/server/results.html
+++ b/server/results.html
@@ -9,19 +9,22 @@
 // }
 
 
-var validateForm = function validateForm(){
-    var latField =  document.getElementById("latField").value; // document.forms["geolocation"]["latField"].value;
-    if (latField == null || latField == "" || latField == "?") {
-        alert("Please allow geolocation");
-        console.log("Gotta allow geolocation")
-        // return false;
-    }
-    else {
-    	console.log("It's there")
-    };
-};
+// var validateForm = function validateForm(){
+//     var latField =  document.getElementById("latField").value; // document.forms["geolocation"]["latField"].value;
+//     if (latField == null || latField == "" || latField == "?") {
+//         alert("Please allow geolocation");
+//         console.log("Gotta allow geolocation")
+//         // return false;
+//     }
+//     else {
+//     	console.log("It's there")
+//     };
+// };
 
-validateForm()
+// validateForm()
+
+
+
 
 </script>
 
