fiddling with the Yelp API Call location

--- a/server/results.html
+++ b/server/results.html
@@ -1,4 +1,6 @@
-<script type="text/javascript">
+<script type="text/javascript" src"api_call.js">
+
+yelpAPICall()
 
 // if (latField.isNumber){
 // 	console.log("yep")
@@ -24,8 +26,7 @@
 // validateForm()
 
 
-
-
 </script>
 
-<h1> Go eat here:<h1>
+<h1> Go eat here:</h1>
+	<p>goodBiz[0]</p>
