better fiddling with yelpAPICall

--- a/server/results.html
+++ b/server/results.html
@@ -1,6 +1,6 @@
-<script type="text/javascript" src"api_call.js">
+<script type="text/javascript">
 
-yelpAPICall()
+// yelpAPICall()
 
 // if (latField.isNumber){
 // 	console.log("yep")
@@ -29,4 +29,5 @@ yelpAPICall()
 </script>
 
 <h1> Go eat here:</h1>
-	<p>goodBiz[0]</p>
+
+
