--- a/server/index.html
+++ b/server/index.html
@@ -43,7 +43,7 @@ console.log("woot");
 	<div>How nice does the reaturant need to be?
 		<br>
 		<br>
-		<form action="./results.html" method="GET" id="geolocation">
+		<form action="/results" method="GET" id="geolocation">
 			<input type="hidden" name="latField" id="latField" value="">
 			<input type="hidden" name="lonField" id="lonField" value="">
 
