Change the geoloacation back into the GET method form, as it was before

--- a/server/index.html
+++ b/server/index.html
@@ -41,23 +41,14 @@ console.log("woot");
 
 
 
-<!-- Alternate attempt to GET the lat/lon -->
-	<form method="POST" id="geolocation">
-		<input type="hidden" name="latField" id="latField" value="">
-		<input type="hidden" name="lonField" id="lonField" value="">
-		<input type="submit" style="display: none;">
-	</form>
-
-
-
 <h1> Are you Hangry?</h1>
 <h2> Do you want to eat?</h2>
 	<div>How nice does the reaturant need to be?
 		<br>
 		<br>
-		<form action="/results" method="GET" id="geolocation2">
-			<!-- <input type="hidden" name="latField" id="latField" value="">
-			<input type="hidden" name="lonField" id="lonField" value=""> -->
+		<form action="/results" method="GET" id="geolocation">
+			<input type="hidden" name="latField" id="latField" value="">
+			<input type="hidden" name="lonField" id="lonField" value="">
 
 			<input type="radio" name="rating" value="0.5"> 0.5
 			
