fixing up the comments and some spacing errors

--- a/server/index.html
+++ b/server/index.html
@@ -1,26 +1,26 @@
- <script type="text/javascript">
+<!-- using the HTML5 geolocation API -->
+<script type="text/javascript">
 	navigator.geolocation.getCurrentPosition(function(position) {
 		// Get the positioning coordinates.
 		var lat = position.coords.latitude;
 		var lon = position.coords.longitude;
 
+		//push the geolocated lat and lon into the hidden fields, so we can pass back to the server
 		document.getElementById("latField").value = lat;
 		document.getElementById("lonField").value = lon;
 
 	});
 
-
-console.log("woot");
 </script>
 
 
-
+<!-- html form to GET lat/lon and rating back to server-->
 <h1> Are you Hangry?</h1>
 <h2> Do you want to eat?</h2>
 	<div>How nice does the reaturant need to be?
 		<br>
 		<br>
-		<form action="/results" method="GET" id="geolocation">
+		<form action="/results" method="GET" id="geolocation" >
 			<input type="hidden" name="latField" id="latField" value="">
 			<input type="hidden" name="lonField" id="lonField" value="">
 
@@ -34,7 +34,7 @@ console.log("woot");
 			
 			<input type="radio" name="rating" value="2.5"> 2.5
 			
-			<input type="radio" name="rating" value="3.0"> 3.0
+			<input type="radio" name="rating" value="3.0" required> 3.0
 			
 			<input type="radio" name="rating" value="3.5"> 3.5
 			
