play with Handlebars rendering.

--- a/server/index.html
+++ b/server/index.html
@@ -20,7 +20,7 @@
 	<div>How nice does the reaturant need to be?
 		<br>
 		<br>
-		<form action="/results" method="GET" id="geolocation" >
+		<form action="/results.hbs" method="GET" id="geolocation" >
 			<input type="hidden" name="latField" id="latField" value="">
 			<input type="hidden" name="lonField" id="lonField" value="">
 
